k8s/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: YOUR_NAMESPACE
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: notizen-app
  namespace: YOUR_NAMESPACE
spec:
  selector:
    app: notizen-app
  ports:
    - port: 8080
      targetPort: 8080
